--- a/GTAV/GTAV.vcxproj
+++ b/GTAV/GTAV.vcxproj
@@ -137,6 +137,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)GTAV\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard_C>Default</LanguageStandard_C>
       <Optimization>MaxSpeed</Optimization>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
